--- a/src/frontend/src/component/layout/NavBar/NavBar.css
+++ b/src/frontend/src/component/layout/NavBar/NavBar.css
@@ -32,6 +32,7 @@
   border: none;
   background-color: transparent;
   /* margin-right: auto; */
+  gap: 10px;
   color: #ffffff99;
 }
 
