--- a/src/frontend/src/component/profile/profileCard/Profile.css
+++ b/src/frontend/src/component/profile/profileCard/Profile.css
@@ -33,11 +33,13 @@
 	padding-top: 15px;
 	padding-bottom: 15px;
 	width: 250px;
-	color: white;
+	color: rgb(247, 255, 8);
 	background-color: #303030;
 	margin-top: 40px;
-	display: block;
+	display: flex;
+	flex-direction: column;
 	align-items: center;
+	gap: 10px;
 	justify-content: center;
 	text-align: center;
 }
@@ -60,7 +62,7 @@
 	background: transparent;
 	border: none;
 	color: rgb(188, 186, 186);
- 	box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+	box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 	margin-left: 10px;
 	margin-top: 10px;
 }
