--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+
+/* Custom fonts */
+@font-face {
+  font-family: 'Font';
+  src: url('/fonts/font.otf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Font';
+  src: url('/fonts/font2.ttf') format('truetype');
+}
 
 /* Variables */
 :root {
@@ -6,7 +18,7 @@
   --twitch-dark:  #6316c1;
   --twitch-hover: #a970ff;
 
-  --bg:       #18181b;
+  --bg:       #190521b3;
   --surface:  #1f1f23;
   --surface2: #2d2d35;
   --border:   rgba(255,255,255,0.1);
@@ -19,17 +31,47 @@
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-  font-family: 'Inter', sans-serif;
-  background: var(--bg);
+  font-family: 'font2', sans-serif;
+
+  background: linear-gradient(
+    135deg,
+    #05020f 0%,
+    #0f0520 10%,
+    #1a0a35 20%,
+    #0f0520 30%,
+    #05020f 40%,
+    #390a20 50%,
+    #0f0520 60%,
+    #05020f 70%,
+    #1a0a35 80%,
+    #0f0520 90%,
+    #05020f 100%
+  );
+
+  background-size: 400% 400%;
+  animation: chrome 18s ease infinite;
+
+  background-blend-mode: overlay, normal;
+
   color: var(--text);
   min-height: 100vh;
   /* padding: 24px 16px 48px; */
 }
 
+@keyframes chrome {
+  0%   { background-position: 0% 50%; }
+  50%  { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
 /* Typography */
-h1, h2, h3 {
-  font-family: 'Inter', sans-serif;
+/* h1, h2, h3 {
+  font-family: 'Font', sans-serif;
   font-weight: 700;
+} */
+
+h1, h2, h3, .navbar-brand {
+  font-family: 'Orbitron', sans-serif;
 }
 
 /* Layout */
@@ -73,7 +115,7 @@ input:where([type="text"], [type="password"], [type="email"]):focus {
   cursor: pointer;
   transition: background 0.15s, transform 0.1s;
   /* width: 100%; */
-/* } */ */
+/* } */
 
 button:active:not(:disabled) { transform: scale(0.98); }
 button:disabled { opacity: 0.45; cursor: not-allowed; }
